# Blaze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.py
inc/: benchmark.h  constants.h  matrix.h  parser.h
src/: benchmark.cpp  benchmark.h  constants.h  kernels.cl  main.cpp  matrix.cpp  matrix.h  parser.cpp  parser.h  timer.h
